# guppy

./: .clang-format  .clangd  .envrc  .gitignore  .gitmodules  Dockerfile  README.md  bootstrap.sh  colcon_defaults.yaml  fake.py  flake.nix  ros2_env.bash
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  fake.py  guppy.txt
.github/workflows/: commits.yaml  docs.yaml  lint.yaml  ros.yaml
install/: local_setup.sh  setup.sh
install/chassis_control/share/chassis_control/: package.ps1  package.sh  package.xml
install/raw_controller/share/raw_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/chassis_control/: package.xml  setup.py
src/chassis_control/chassis_control/: thrust_vectoring.py
src/chassis_control/chassis_control/install/: local_setup.sh  setup.sh
src/chassis_control/chassis_control/log/: latest_build
src/chassis_control/install/: local_setup.sh  setup.sh
src/chassis_control/log/: latest_build
src/controller_translation/: controller_indices.md  package.xml  setup.cfg  setup.py
src/flir/: package.xml  setup.cfg  setup.py
src/flir/flir/: view_cam.py
src/guppy/: CMakeLists.txt  README.md  package.xml
src/guppy/launch/: fcs_sim.xml  hw.xml  input.xml  ksed-teleop.xml  ksed.xml  sim.xml  teleop.xml  terminal.xml  test.xml
src/guppy_can/: CMakeLists.txt  README.md  package.xml
src/guppy_can/launch/: core.xml  sim.xml
src/guppy_can/src/: a  can_rx.cpp  can_rx_publisher.cpp  can_throttle_subscriber.cpp  can_tx.cpp  can_tx_client.cpp  can_tx_server.cpp  throttle_publisher.cpp
src/guppy_control/: CMakeLists.txt  README.md  interfaces.xml  package.xml  t200_interface.xml
src/guppy_control/config/: controller_params.yaml
src/guppy_control/guppy_control_chassis/: CMakeLists.txt
src/guppy_control/guppy_control_chassis/guppy_control_chassis/: thrust_vectoring.py
src/guppy_control/guppy_control_chassis/include/guppy_control_chassis/: chassis_controller.hpp  t200_interface.hpp
src/guppy_control/include/guppy_control/: can_actuator_interface.hpp  chassis_controller.hpp  t200_interface.hpp
src/guppy_control/launch/: core.xml  sim.xml
src/guppy_control/src/: can_actuator_interface.cpp  chassis_controller.cpp  claw_control.cpp  control_chassis_node.cpp  t200_interface.cpp  torpedo.cpp
src/guppy_description/: CMakeLists.txt  README.md  package.xml
src/guppy_description/launch/: core.xml  cv_sim.xml  fcs_sim.xml  sim.xml
src/guppy_description/urdf/: guppy.csv  guppy.urdf
src/guppy_localization/: CMakeLists.txt  README.md  package.xml
src/guppy_localization/config/: ekf.yaml
src/guppy_localization/launch/: all.xml  core.xml  sim.xml
src/guppy_localization/src/: barometer_pub.cpp  combine.cpp
src/guppy_moveit/: CMakeLists.txt  package.xml
src/guppy_msgs/: CMakeLists.txt  README.md  package.xml
src/guppy_msgs/action/: LaneFollow.action  Navigate.action
src/guppy_msgs/msg/: AlignAction.msg  CanFrame.msg  CornerDetection.msg  CornerDetectionList.msg  RelativeObjectDetection.msg  RelativeObjectDetectionList.msg  SafetyLevel.msg  State.msg  Toast.msg
src/guppy_msgs/srv/: ChangeState.srv  SendCan.srv  SendClaw.srv  SetHoldPose.srv
src/guppy_nav/: CMakeLists.txt  README.md  package.xml
src/guppy_nav/include/guppy_nav/: acquire_detection.hpp  change_state_behavior.hpp  face_detection_behavior.hpp  face_image_behavior.hpp  lane_follow_behavior.hpp  move_toward_behavior.hpp  pose_setter_behavior.hpp  trajectory.hpp
src/guppy_nav/launch/: core.xml  sim.xml
src/guppy_nav/src/: behavior_tree.cpp  change_state_node.cpp  navigate_action_server.cpp  pose_setter_behavior.cpp  pose_setter_server.cpp
src/guppy_nav2/: CMakeLists.txt  package.xml
src/guppy_safety/: CMakeLists.txt  README.md  package.xml
src/guppy_safety/msg/: Status.msg
src/guppy_safety/src/: checker.cpp  heartbeat.cpp  responder.cpp  subscriber_checker.cpp
src/guppy_state/: CMakeLists.txt  README.md  package.xml
src/guppy_state/include/guppy_state/: state.hpp
src/guppy_state/launch/: core.xml  sim.xml
src/guppy_state/src/: change_state_node.cpp  led_pub.cpp  navstart.cpp  state.cpp  state_manager.cpp  state_service.cpp
src/guppy_tasks/: CMakeLists.txt  README.md  lanefollowaction.md  package.xml  setup.cfg  setup.py
src/guppy_tasks/guppy_tasks/: lanefollowaction.py
src/guppy_tasks/guppy_tasks/src/: fcs_camera_listener.py  fcs_rangefinder.py  fcs_target_tracker.py  fcs_targeting.py
src/guppy_tasks/launch/: fcs_test.xml
src/guppy_tasks/resource/: LaneFollow.xml  full-spin.xml  fullspin-absolute.xml  fullspin-local.xml  fullspin.xml  guppy_tasks  practice-run.xml  prequal.xml  search.xml  spin-test.xml  t-shape.xml
src/guppy_tasks/src/: align.cpp
src/guppy_teleop/: README.md  package.xml  setup.cfg  setup.py
src/guppy_teleop/guppy_teleop/: input_handler.py  keyboard.py  ksed.py  ksed_controller.py  raw_controller.py  translator.py
src/guppy_teleop/guppy_teleop/backend/: registry.py  terminal_backend.py
src/guppy_teleop/guppy_teleop/frontend/: assets.qrc  build.py  pyproject.toml  terminal.py  terminal_frontend.py  toast_service.py  widget_registry.py  workspace_manager.py
src/guppy_teleop/guppy_teleop/input/: controller.py  (+3 more)
src/guppy_teleop/launch/: core.xml  input.xml  ksed.xml  teleop.xml  terminal.xml
src/guppy_tests/: package.xml  setup.cfg  setup.py
src/guppy_vision/: CMakeLists.txt  README.md  package.xml
src/guppy_vision/calib/: framework13.yaml
src/guppy_vision/guppy_vision/: apriltag_detector.py  object_detection.py
src/guppy_vision/launch/: core.xml  cv_test.xml  sim.xml
src/guppy_vision/src/: align.cpp  april.cpp  camera_manager.cpp  camera_manager.hpp  camera_pub.cpp  cvUFEnode.cpp  lane_navigator_cpp.cpp  pnp.cpp  signs.cpp  slam.cpp  webcam_pub.cpp
startup/: guppy.service  setup.sh
util/: T.sh  bootstrap.sh  calibrate_cams.py  play_bag.sh  record_bag.sh  run_in_docker.sh  setup_vcan.sh
util/guppy_can/: install_can_service.sh  setup_can.service  setup_can.sh
util/guppy_network/: 99-guppy-netplan.yaml  dnsmasq.conf  network_init.sh
(+43 files in other folders)
