<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guppy</name>
  <version>0.0.0</version>
  <description>Guppy AUV (2026) Metapackage.</description>
  <maintainer email="colewilson.main@gmail.com">Palouse RoboSub</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>guppy_bringup</exec_depend>
  <exec_depend>guppy_can</exec_depend>
  <exec_depend>guppy_control_chassis</exec_depend>
  <exec_depend>guppy_control_arm</exec_depend>
  <exec_depend>guppy_control_torpedo</exec_depend>
  <exec_depend>guppy_description</exec_depend>
  <exec_depend>guppy_localization</exec_depend>
  <exec_depend>guppy_moveit</exec_depend>
  <exec_depend>guppy_msgs</exec_depend>
  <exec_depend>guppy_nav2</exec_depend>
  <exec_depend>guppy_safety</exec_depend>
  <exec_depend>guppy_state</exec_depend>
  <exec_depend>guppy_tasks</exec_depend>
  <exec_depend>guppy_teleop</exec_depend>
  <exec_depend>guppy_vision</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
