<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>guppy_tasks</name>
  <version>0.0.0</version>
  <description>Task completion code in the form of different action nodes for the 2026 Guppy AUV.</description>
  <maintainer email="colewilson.main@gmail.com">Palouse RoboSub</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>guppy_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
